--- a/SESI 2/index.html
+++ b/SESI 2/index.html
@@ -5,18 +5,30 @@
     <meta name="viewport" content="width=, initial-scale=1.0">
     <title>Document</title>
     <style>
-        * {
-            color: blue;
-        }
-
         h1 {
             color: green;
+        }
+        .teks-merah,
+        #teks-kuning {
+            font-size: 20px;
+            text-align: center;
+            background-color:black ;
+            color: yellow;
+        }
+
+        .teks-merah {
+            color: red;
+        }
+
+        #teks.kuning {
+            color: yellow;
         }
     </style>
 </head>
 <body>
-    <h1>Pemrograman web 1</h1>
-    <p>Praktiik Pemrograman Web 1 sesi 2 akan membahas tentang penggunaan CSS.</p>
-    <p>CSS atau Cascanding style Sheets adalahh sebuah  bahasa yang digunakan untuk mengatur tampilan suatu halaman web</p>
+    <h1>Pemrograman  web 1</h1>
+    <p class= "teks-merah">praktik pemrogramann web 1 sesi 2 akan membahas tentang penggunaan CSS.</p>
+    <p id="teks-kuning">CSS atau Cascanding Style Sheets adalah sebuah bahasa yang digunaakan untuk mengatur tampilan suatu halaman web</p>         
 </body>
+
 </html>
