--- a/SESI 2/index.html
+++ b/SESI 2/index.html
@@ -31,6 +31,22 @@
         div > div > p {
             font-weight: bold;
         }
+
+        .subbaagian {
+            font-size: 30px;
+        }
+
+        .subbaagian.header {
+            color: blueviolet;
+        }
+
+        .subbaagian#teks {
+            color:brown;
+        }
+
+        p:hover {
+            background-color: aqua;
+        }
     </style>
 </head>
 <body>
@@ -43,6 +59,11 @@
         <div>
             <p>Ini adalah paragraf kedua.</p>
         </div>
+    </div>
+
+    <div>
+        <div class="subbagian  header">Bagian header</div>
+        <p class="subbaagian" id="teks">Ini adalah paragraf</p>
     </div>
 </body>
 
