--- a/SESI 2/index.html
+++ b/SESI 2/index.html
@@ -47,6 +47,10 @@
         p:hover {
             background-color: aqua;
         }
+        * {
+            color: blue;
+            border: 2px solid red;
+        }
     </style>
 </head>
 <body>
