--- a/SESI 2/internal.html
+++ b/SESI 2/internal.html
@@ -8,5 +8,16 @@
 </head>
 <body>
     <h1>Ini adalah heading 1</h1>
+    <div class="kotak-satu">
+        kotak satu
+    </div>
+
+    <div class="kotak-dua">
+        kotak dua
+    </div>
+
+    <div class="kotak-tiga">
+        kotak tiga
+    </div>
 </body>
 </html>
