--- a/landingpage.html
+++ b/landingpage.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="menu-coontainer">
+    <div class="menu-container">
         <div class="menu">
             <div class="data">1 Desember 2022</div>
             <div class="links">
